PROJECT( util )
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#add_subdirectory( src )

#SET (CMAKE_CXX_FLAGS_INIT "-std=c++0x")
add_definitions("-std=c++0x")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(array1 array1.cpp)
ADD_EXECUTABLE(vector_test vector_test.cpp)
ADD_EXECUTABLE(vector1 vector1.cpp)
ADD_EXECUTABLE(deque_test deque_test.cpp)
ADD_EXECUTABLE(deque1 deque1.cpp)
ADD_EXECUTABLE(list1 list1.cpp)
ADD_EXECUTABLE(forwardlist_test forwardlist_test.cpp)
ADD_EXECUTABLE(forwardlistfind1 forwardlistfind1.cpp)
# ADD_EXECUTABLE(forwardlistsplice1 forwardlistsplice1.cpp)
ADD_EXECUTABLE(forwardlist1 forwardlist1.cpp)
ADD_EXECUTABLE(setrange1 setrange1.cpp)
ADD_EXECUTABLE(set1 set1.cpp)
ADD_EXECUTABLE(multiset1 multiset1.cpp)
ADD_EXECUTABLE(setcmp1 setcmp1.cpp)

#target_link_libraries( main Test )
