PROJECT( fo )
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#add_subdirectory( src )

#SET (CMAKE_CXX_FLAGS_INIT "-std=c++0x")
add_definitions("-std=c++0x")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(sort1 sort1.cpp)
ADD_EXECUTABLE(sequence1 sequence1.cpp)
ADD_EXECUTABLE(sequence2 sequence2.cpp)
ADD_EXECUTABLE(foreach3 foreach3.cpp)
ADD_EXECUTABLE(removeif1 removeif1.cpp)
ADD_EXECUTABLE(bind1 bind1.cpp)
ADD_EXECUTABLE(compose3 compose3.cpp)
ADD_EXECUTABLE(bind2 bind2.cpp)
ADD_EXECUTABLE(fopow1 fopow1.cpp)
ADD_EXECUTABLE(lambda1 lambda1.cpp)
ADD_EXECUTABLE(lambda2 lambda2.cpp)
ADD_EXECUTABLE(lambda3 lambda3.cpp)
ADD_EXECUTABLE(lambda4 lambda4.cpp)
ADD_EXECUTABLE(lambda5 lambda5.cpp)

#target_link_libraries( main Test )
