PROJECT( stl )
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#add_subdirectory( src )

#SET (CMAKE_CXX_FLAGS_INIT "-std=c++0x")
add_definitions("-std=c++0x")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(vector1 vector1.cpp)
ADD_EXECUTABLE(deque1 deque1.cpp)
ADD_EXECUTABLE(array1 array1.cpp)
ADD_EXECUTABLE(list1 list1.cpp)
ADD_EXECUTABLE(list2 list2.cpp)
ADD_EXECUTABLE(forwardlist1 forwardlist1.cpp)
ADD_EXECUTABLE(multiset1 multiset1.cpp)
ADD_EXECUTABLE(multimap1 multimap1.cpp)
ADD_EXECUTABLE(unordmultiset1 unordmultiset1.cpp)
ADD_EXECUTABLE(unordmap1 unordmap1.cpp)
ADD_EXECUTABLE(assoarray1 assoarray1.cpp)
ADD_EXECUTABLE(list1old list1old.cpp)
ADD_EXECUTABLE(set1 set1.cpp)
ADD_EXECUTABLE(unordmultiset2 unordmultiset2.cpp)
ADD_EXECUTABLE(algo1 algo1.cpp)
ADD_EXECUTABLE(find1 find1.cpp)

#target_link_libraries( main Test )
