PROJECT( util )
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#add_subdirectory( src )

#SET (CMAKE_CXX_FLAGS_INIT "-std=c++0x")
add_definitions("-std=c++0x")
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(pair1 pair1.cpp)
ADD_EXECUTABLE(pair_test pair_test.cpp)
ADD_EXECUTABLE(tuple1 tuple1.cpp)
ADD_EXECUTABLE(tuple2 tuple2.cpp printtuple.hpp )
ADD_EXECUTABLE(sharedptr1 sharedptr1.cpp)
ADD_EXECUTABLE(sharedptr_test sharedptr_test.cpp)
# ADD_EXECUTABLE(sharedptr3 sharedptr3.cpp)
ADD_EXECUTABLE(weakptr1 weakptr1.cpp)
ADD_EXECUTABLE(weakptr2 weakptr2.cpp)
ADD_EXECUTABLE(weakptr_test weakptr_test.cpp)
ADD_EXECUTABLE(enableshared1 enableshared1.cpp)
ADD_EXECUTABLE(uniqueptr1 uniqueptr1.cpp)

#target_link_libraries( main Test )
